Change for #292 add new IncompletePenetranceAlleleCalculator